<resources>
    <string name="app_name">NekApp</string>
    <string name="hashtags">#ПОХОДЫ #СВОБОДА \n #ПРЕОДОЛЕНИЯ #ОТКРЫТИЯ</string>
    <string name="task">ОПИШИ ПЕРЕВАЛ</string>
    <string name="task2">Наполняем каталог перевалов вместе</string>
    <string name="enter_btn">ВОЙТИ</string>

    <string name="reg_welcome">Добро пожаловать</string>
    <string name="reg_meeting">Давайте знакомиться</string>
    <string name="reg_achievements">Запишем вас: \n \u2022 в список помогавших наполнять базу перевалов \n \u2022 в качестве первопроходителей перевала, если он новый \n \u2022 в базу туристов ФСТР</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="patron_hint">Отчество</string>
    <string name="email_hint">Email (логин и средство связи)</string>
    <string name="email_text">youremail@mail.com</string>
    <string name="phone_hint">Телефон (по желанию)</string>
    <string name="social_hint">Ссылка на соцсети (по желанию)</string>
    <string name="person_data_text">Используя приложение, вы даёте согласие ФСТР на обработку персональных данных</string>

    <string name="content_description_more">Еще</string>
    <string name="more">Еще</string>
    <string name="content_description_search">Поиск</string>
    <string name="search">Поиск</string>

    //neklist activity
    <string name="username_default">Лоханкин Васисуалий</string>
    <string name="neklist_instructions">Нажмите на + \n чтобы добавить перевал</string>
    <string name="neklist_link_text">Посмотреть базу перевалов</string>
    <string name="btn_plus_text">добавить \n описание</string>
    <string name="btn_edit_text">редакти \n ровать</string>
    <string name="nek_date_text">дата прохождения</string>
    <string name="nek_photo_count">количество фото</string>
    <string name="nek_name">название перевала</string>

    //nekadd activity
    <string name="info_icon">Инфо-иконка</string>
    <string name="add_welcome_text">Добавление перевала</string>
    <string name="nekname_hint">Название перевала</string>
    <string name="checkbox_weather_instr">Сложность существенно \n увеличится в зависимости \n от погодных условий \n (снегопад, внезапное \n облединение склонов и пр.)</string>
    <string name="checkbox_not_sure_instr">Если вы не уверены \n в оценке категории</string>
    <string name="checkbox_not_achieve_instr">Если вы не прошли \n этот перевал</string>
    <string name="category_header">Категория перевала</string>
    <string name="NK_category">Н/К</string>
    <string name="A_category">1А</string>
    <string name="B_category">1Б</string>
    <string name="AA_category">2А</string>
    <string name="BB_category">2Б</string>
    <string name="AAA_category">3А</string>
    <string name="BBB_category">3Б</string>
    <string name="addition_header">Добавить</string>
    <string name="checkbox_weather">*</string>
    <string name="checkbox_not_sure">не уверен</string>
    <string name="checkbox_not_achieve">оценочно</string>
    <string name="date_header">Дата прохождения</string>
    <string name="current_date_text">Сегодня: </string>
    <string name="coordinates_header">Координаты</string>
    <string name="latitude_hint">Широта (Х.ХХ)</string>
    <string name="longtitude_hint">Долгота (Х.ХХ)</string>
    <string name="nekheight_hint">Высота (метров)</string>
    <string name="photo_header">Фото</string>
    <string name="photo_hint">Добавьте фото</string>

    <string name="photo_btn_memory_descr">Загрузить из галереи</string>
    <string name="photo_btn_camera_descr">Сделать фото</string>

    <string name="from_gallery">из галереи</string>
    <string name="from_camera">с камеры</string>
    <string name="nek_photo_descr">Фото перевала</string>
    <string name="photo_description_header">Поясните, что на фото</string>
    <string name="photo_description_hint">Описание фото</string>
    <string name="photo_description_default">Перевал соединяет озеро Верхнее Крепкое и реку Тихая. При подъеме открываются красивые виды на озеро Крепкое. После подъема более плоский участок.</string>
    <string name="send_btn">ОТПРАВИТЬ</string>

    //
</resources>