<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".RegActivity">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reg_welcome"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/reg_welcome_height"
                android:text="@string/reg_welcome"
                android:textSize="@dimen/reg_welcome_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="@dimen/barrier_height"
                android:background="@color/black"
                app:layout_constraintTop_toBottomOf="@id/reg_welcome" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reg_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_meeting"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/reg_meeting_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reg_achievements"
                android:layout_width="@dimen/reg_achievements_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:inputType="textMultiLine"
                android:text="@string/reg_achievements"
                android:textColor="@color/black"
                android:textSize="@dimen/reg_achievements_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reg_meeting" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surname_layout"
                style="@style/Theme.NekApp.InputBox"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/surname_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reg_achievements">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/Theme.NekApp.InputBox"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surname_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patron_layout"
                style="@style/Theme.NekApp.InputBox"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/patron_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/patron_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Theme.NekApp.InputBox"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/patron_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_layout"
                style="@style/Theme.NekApp.InputBox"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/phone_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/social_layout"
                style="@style/Theme.NekApp.InputBox"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:hint="@string/social_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/social_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEditText"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enter_btn"
                android:layout_width="@dimen/enter_btn_width"
                android:layout_height="@dimen/enter_btn_height"
                android:layout_marginTop="@dimen/margin_default"
                android:backgroundTint="@color/text_blue"
                android:text="@string/enter_btn"
                android:textColor="@color/white"
                android:textSize="@dimen/enter_btn_text_size"
                app:cornerRadius="@dimen/enter_btn_corner_rad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/social_layout" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/person_data_text"
                android:layout_width="@dimen/person_data_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/end_margin_B"
                android:text="@string/person_data_text"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/grey"
        app:menu="@menu/bottom_app_bar"
        app:navigationIcon="@drawable/ic_menu_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
